cluster/core/rook-ceph/rook-ceph/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-dashboard
  namespace: default
  labels:
    app.kubernetes.io/name: rook-ceph
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`rook.${SECRET_DOMAIN}`)
      middlewares:
        - name: local-only@file
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          namespace: rook-ceph
  tls:
    secretName: "rook-ceph-tls"
